Changes from Version 1.0.0 to 1.1.0 [January 27 2019]

* Modified vcf2pooldata function to allows parsing of vcf generated by software other than VarScan (e.g., GATK, BcfTools). Format are automatically detected based on the presence of AD (Bcftools like) or AD and RD fields (VarScan like)
* Modified vcf2pooldata and popsync2pooldata to allow parallelization of some parts of the parsing

Changes from Version 0.0.1 to 1.0.0 [September 14 2018]

* Changed notations in the ComputeFst functions for the MoM method to be consistent with Genetics paper (MoM=>Anova and PiD=>Identity)
* Fixed an issue with missing data in computeFST function (for the MoM method)
* Function pooldata.subset added
* snpdet matrix with dummy values added to the pooldata object created by genobaypass2pooldata and genoselestim2pooldata functions for compatibility with other functions
* Minor corrections