@@ -1,13 +1,13 @@
 Package: poolfstat
 Maintainer: Mathieu Gautier <mathieu.gautier@inra.fr>
 Author: Mathieu Gautier, Valentin Hivert and Renaud Vitalis
-Version: 1.1.0
+Version: 1.1.1
 License: GPL (>= 2)
 Title: Computing F-Statistics from Pool-Seq Data
 Description: Functions for the computation of F-statistics from Pool-Seq data in population genomics studies. The package also includes several utilities to manipulate Pool-Seq data stored in standard format ('vcf' or 'rsync' files generated by the the 'PoPoolation' software) and perform conversion to alternative format (as used in the 'BayPass' and 'SelEstim' software).
 Depends: R (>= 3.0), methods, utils, foreach, doParallel, parallel
 RoxygenNote: 6.1.1
 NeedsCompilation: no
-Packaged: 2019-06-20 14:53:56 UTC; mathieu
+Packaged: 2019-10-22 09:05:35 UTC; mathieu
 Repository: CRAN
-Date/Publication: 2019-06-20 15:00:02 UTC
+Date/Publication: 2019-10-22 09:30:06 UTC
