@@ -8,8 +8,8 @@ citEntry(entry="Article",
          author = 	 "Hivert V., Leblois R., Petit E.J., Gautier M., and Vitalis R.",
          title = 	 "Measuring genetic differentiation from Pool-seq data",
          journal = 	 "Genetics",
-         year = 	 0,
-         volume =	 0,
-         number =	 "submitted",
-         pages="1176-1177",
-         textVersion ="Hivert V, Leblois R, Petit EJ, Gautier M, and Vitalis R (2018). Measuring genetic differentiation from Pool-seq data. Genetics, submitted" )
+         year = 	 2018,
+         volume =	 210,
+         number =	 1,
+         pages="315-330",
+         textVersion ="Hivert V, Leblois R, Petit EJ, Gautier M, and Vitalis R (2018). Measuring genetic differentiation from Pool-seq data. Genetics, 210(1):315-330" )
