@@ -1,4 +1,9 @@
-Changes from Version 1.0.0 to 1.1.0 [January 27 2019]
+Changes from Version 1.1.0 to 1.1.1 [October 22 2019]
+
+* Fixed an issue with parsing of vcf files generated by FreeBayes
+* Fixed an issue with prefix option and changed writing.dir default value in pooldata2genobaypass an pooldata2selestim functions
+
+Changes from Version 1.0.0 to 1.1.0 [June 23 2019]
 
 * Modified vcf2pooldata function to allows parsing of vcf generated by software other than VarScan (e.g., GATK, BcfTools). Format are automatically detected based on the presence of AD (Bcftools like) or AD and RD fields (VarScan like)
 * Modified vcf2pooldata and popsync2pooldata to allow parallelization of some parts of the parsing
